[tool.poetry]
name = "pycounts_mfmc"
version = "0.1.0"
description = "Individual assignment 1 for DSCI 524"
authors = ["Morris Chan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
